[gd_scene load_steps=3 format=3 uid="uid://bhud123456"]

[ext_resource type="Script" path="res://scripts/game_hud.gd" id="1_hud"]
[ext_resource type="Texture2D" path="res://assets/icons/pause_icon.svg" id="2_pause"]

[node name="GameHUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
script = ExtResource("1_hud")

[node name="PauseContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -80.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 80.0

[node name="PauseButton" type="Button" parent="PauseContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 0
icon = ExtResource("2_pause")
flat = true
expand_icon = true
